:heavy_check_mark: Сборка #1

--- a/1/1-invitation/index.html
+++ b/1/1-invitation/index.html
@@ -7,10 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta content="telephone=no" name="format-detection" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
+    <title>Приглашение на вебинар</title>
   </head>
 
   <body>
+    <div></div>
   </body>
 
 </html>
