--- a/1/2-welcome/index.html
+++ b/1/2-welcome/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta content="telephone=no" name="format-detection" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title></title>
+    <title>Успешная регистрация на курс</title>
   </head>
   <body>
-      
+
   </body>
 </html>
